# cpu6502

./: .gitignore  CMakeLists.txt
googletest/: CMakeLists.txt
src/: Computer.cpp  Computer.h  types.h
src/cpu/: CPU.cpp  CPU.h  CPUexecute.cpp
src/memory/: Memory.cpp  Memory.h
test/: addWithCarryTests.cpp  andInstructionTests.cpp  bitAndNopInstructionsTests.cpp  branchInstructionsTests.cpp  changeFlagsTests.cpp  eorInstructionTests.cpp  incrementAndDecrementTests.cpp  jumpsAndSubroutinesTests.cpp  loadRegisterATests.cpp  loadRegisterXTests.cpp  loadRegisterYTests.cpp  oraInstructionTests.cpp  programTests.cpp  stackInstructionsTests.cpp  storeRegisterATests.cpp  storeRegisterXTests.cpp  storeRegisterYTests.cpp  subWithCarryTests.cpp  transferTests.cpp
